fixed spacing issues in bar graph

--- a/css/main.scss
+++ b/css/main.scss
@@ -181,7 +181,7 @@ section#tax-bracket-graph {
 
       div.first-bar {
         background-color: $green;
-        height: 100px;
+        height: 120px;
         box-sizing: border-box;
         width: 100%;
         padding-top: 20px;
@@ -194,7 +194,7 @@ section#tax-bracket-graph {
 
       div.second-bar {
         background-color: $green;
-        height: 200px;
+        height: 220px;
         box-sizing: border-box;
         width: 100%;
         padding-top: 20px;
@@ -206,14 +206,14 @@ section#tax-bracket-graph {
       background-color: $primary;
 
       div.third-bar {
-        height: 300px;
+        height: 320px;
         box-sizing: border-box;
         width: 100%;
         padding-top: 20px;
         background-color: $gray;
 
         p {
-          margin-bottom: 184px;
+          margin-bottom: 196px;
         }
 
         div.money-end {
